# findb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  dblentry.toml.example  docker-compose.test.yml  findb.toml.example  make.ps1  readme.md  sample1.fql  sample1.fql.bak
.github/workflows/: ci.yml
benches/: engine_bench.rs
crates/dblentry-core/: Cargo.toml
crates/dblentry-core/src/: lib.rs  storage.rs
crates/dblentry-core/src/models/: mod.rs  write.rs
crates/dblentry-mcp/: Cargo.toml
crates/dblentry-mcp/src/: lib.rs
crates/dblentry-memory/: Cargo.toml
crates/dblentry-memory/src/: lib.rs
crates/dblentry-postgres/: Cargo.toml
crates/dblentry-postgres/src/: lib.rs
crates/dblentry-sqlite/: Cargo.toml
crates/dblentry-sqlite/src/: lib.rs
crates/findb-core/: Cargo.toml
crates/findb-core/src/: lib.rs
crates/findb-core/src/models/: mod.rs  read.rs
crates/findb-postgres/: Cargo.toml
crates/findb-postgres/src/: lib.rs
crates/findb-sqlite/: Cargo.toml
crates/findb-sqlite/src/: lib.rs
docs/ai/: fql-reference.md
docs/human/: index.md  package-lock.json  package.json
docs/human/.vitepress/: config.ts
docs/human/cookbook/: lending-fund.md  multi-currency.md
docs/human/guide/: core-concepts.md  entities.md  getting-started.md  transactions.md
docs/human/reference/: expressions.md  functions.md  grammar.md  statements.md
proto/: dblentry.proto  findb.proto
src/: ast.rs  auth.rs  config.rs  display.rs  evaluator.rs  function_registry.rs  functions.rs  grpc.rs  idempotency.rs  lexer.rs  lib.rs  main.rs  models.rs  postgres_storage.rs  sqlite_storage.rs  statement_executor.rs  storage.rs
src/api/: mod.rs
src/api/v1/: handlers.rs  mappers.rs  mod.rs  nl.rs  schema.rs  spec.rs  types.rs
src/models/: read.rs  write.rs
tests/: integration_tests.rs
ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: 01-navigation.spec.ts  02-dashboard.spec.ts  03-query.spec.ts  04-accounts.spec.ts  05-journals.spec.ts  06-rates.spec.ts  07-reports.spec.ts  08-tours.spec.ts  09-entities.spec.ts  10-bug-hunt.spec.ts  11-advanced-fql.spec.ts  12-account-statements.spec.ts  13-reports-accuracy.spec.ts  14-tour-execution.spec.ts  15-entity-isolation.spec.ts  16-form-validation.spec.ts  17-query-features.spec.ts  18-cross-feature.spec.ts
ui/public/tours/: ecommerce.fqlt  global-operations.fqlt  investment-portfolio.fqlt  lending-fund.fqlt  property-management.fqlt  saas-subscriptions.fqlt
ui/src/: App.vue  main.ts  router.ts  style.css
ui/src/api/: client.ts
ui/src/components/tour/: EntityPicker.vue  TourCodeBlock.vue  TourNarrative.vue  TourPlayer.vue  TourProgress.vue  TourStepView.vue
ui/src/lib/: fql-highlight.ts
ui/src/lib/fqlt/: index.ts  parser.ts  types.ts
ui/src/lib/fqlt/__tests__/: parser.test.ts
ui/src/stores/: dblentry.ts  entity.ts  findb.ts
ui/src/views/: AccountsView.vue  DashboardView.vue  JournalsView.vue  QueryView.vue  RatesView.vue  ReportsView.vue  TourView.vue
