[workspace]
members = [
    ".",
    "crates/findb-core",
    "crates/findb-sqlite",
    "crates/findb-postgres",
]

[package]
name = "findb"
version = "0.1.0"
edition = "2021"

[dependencies]
findb-core = { path = "crates/findb-core" }
findb-sqlite = { path = "crates/findb-sqlite" }
findb-postgres = { path = "crates/findb-postgres" }
axum = "0.6.20"
clap = { version = "4.3", features = ["derive"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
peg = "0.8.1"
prost = "0.12"
prettytable-rs = "0.10.0"
rust_decimal = { version = "1.31", features = ["maths"] }
rust_decimal_macros = "1.31"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
subtle = "2.5"
thiserror = "1.0"
time = { version = "0.3.23", features = ["std"] }
tokio = { version = "1.38", features = ["full"] }
tonic = "0.10"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.4.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
findb-sqlite = { path = "crates/findb-sqlite" }
findb-postgres = { path = "crates/findb-postgres" }
postgres = "0.19"
rust_decimal_macros = "1.31"

[[bench]]
name = "engine_bench"
harness = false
