[workspace]
members = [
    ".",
    "crates/dblentry-core",
    "crates/dblentry-memory",
    "crates/dblentry-sqlite",
    "crates/dblentry-postgres",
    "crates/dblentry-mcp",
]

[package]
name = "dblentry"
version = "0.1.0"
edition = "2021"

[features]
nl = ["reqwest"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], optional = true }
dblentry-core = { path = "crates/dblentry-core" }
dblentry-memory = { path = "crates/dblentry-memory" }
dblentry-sqlite = { path = "crates/dblentry-sqlite" }
dblentry-postgres = { path = "crates/dblentry-postgres" }
dblentry-mcp = { path = "crates/dblentry-mcp" }
axum= "0.6.20"
clap = { version = "4.3", features = ["derive"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
peg = "0.8.1"
prost = "0.12"
prettytable-rs = "0.10.0"
rust_decimal = { version = "1.31", features = ["maths"] }
rust_decimal_macros = "1.31"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
subtle = "2.5"
thiserror = "1.0"
time = { version = "0.3.23", features = ["std"] }
tokio = { version = "1.38", features = ["full"] }
tonic = "0.10"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.4.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dblentry-sqlite = { path = "crates/dblentry-sqlite" }
dblentry-postgres = { path = "crates/dblentry-postgres" }
paste = "1.0"
postgres = "0.19"
rust_decimal_macros = "1.31"

[[bench]]
name = "engine_bench"
harness = false
