[package]
name = "dblentry-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
dblentry-core = { path = "../dblentry-core" }
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
