[package]
name = "dblentry-memory"
version = "0.1.0"
edition = "2021"
description = "In-memory storage backend for DblEntry"

[dependencies]
dblentry-core = { path = "../dblentry-core" }
rust_decimal = { version = "1.31", features = ["maths"] }
time = { version = "0.3.23", features = ["std"] }
tracing = "0.1"
uuid = { version = "1.4.0", features = ["v4"] }
