[package]
name = "dblentry-sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite storage backend for DblEntry"

[dependencies]
dblentry-core = { path = "../dblentry-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
rust_decimal = { version = "1.31", features = ["maths"] }
time = { version = "0.3.23", features = ["std"] }
tracing = "0.1"
uuid = { version = "1.4.0", features = ["v4"] }
