[package]
name = "findb-core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for FinanceDB storage backends"

[dependencies]
rust_decimal = { version = "1.31", features = ["maths"] }
thiserror = "1.0"
time = { version = "0.3.23", features = ["std"] }
prettytable-rs = "0.10.0"
